--- a/fireworks-master/boby/css/style.css
+++ b/fireworks-master/boby/css/style.css
@@ -13,7 +13,7 @@ body {
     margin: 0;
     padding: 0;
     background: #FBDBEF;
-    font-size: 12px;
+    font-size: 2rem;
     overflow: auto
 }
 
@@ -23,7 +23,6 @@ body {
 }
 
 #loveHeart {
-    float: left;
     width: 670px;
     height: 625px
 }
@@ -35,7 +34,7 @@ body {
 
 #elapseClock {
     text-align: right;
-    font-size: 18px;
+    font-size: 45px;
     margin-top: 10px;
     margin-bottom: 10px
 }
@@ -43,7 +42,7 @@ body {
 #words {
     font-family: "微软雅黑";
     width: 500px;
-    font-size: 24px;
+    font-size: 60px;
     color: #666
 }
 
@@ -55,7 +54,7 @@ body {
 
 #elapseClock .digit {
     font-family: "digit";
-    font-size: 36px
+    font-size: 70px
 }
 
 #loveu {
@@ -78,13 +77,12 @@ body {
 }
 
 #code {
-    float: left;
-    width: 480px;
+    width: 50rem;
     height: 480px;
     color: #333;
     font-family: "微软雅黑";
-    font-size: 18px;
-    line-height: 26px;
+    font-size: 3rem;
+    line-height: 3.2rem;
 }
 
 #code .string {
@@ -104,13 +102,6 @@ body {
     color: #F180C5
 }
 
-#copyright {
-    margin-top: 10px;
-    text-align: center;
-    width: 100%;
-    color: #F180C5
-}
-
 #errorMsg {
     width: 100%;
     text-align: center;
@@ -127,7 +118,7 @@ body {
 .bb {
     display: block;
     text-align: center;
-    padding-lef: 100px;
+    padding-left: 100px;
     font-size: 40px;
     color: #F180C5
 }
@@ -141,4 +132,11 @@ body {
 
 body {
     background: url(../images/houtaibizhi.jpg);
+}
+
+audio,
+embed {
+    position: absolute;
+    z-index: -9999;
+    top: -9999px;
 }
